Task7/gatekeeper/pod-security-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSP
metadata:
  name: pod-security-restricted
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["audit-zone"]
